fix: spacing titles mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -190,6 +190,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 36px;
+  margin: 48px 0;
 }
 
 h3 {
@@ -207,7 +208,7 @@ h3 {
 
   h1, h2 {
     font-size:60px;
-    margin-top: 96px;
+    margin-top: 96px 0 ;
   }
   
   p, li {
